Fix #107416: Check length of Property Collection before type.

In edit mode the uv map data length gets set to zero. The specialized
MLoopUV code used to have a check to detect this when trying to access
the UVs using foreach_get/set . Add this chekc for the Attribute code
path as well.